# UtentiGSuite

./: CMakeLists.txt  README.md  Utenti.m4v  build_linux  build_mingw32  build_mingw64  removefile.ps1  removefile.sh  utenti.kdev4  utenti.xlsx
cmake/modules/: DetectMachine.cmake  MinGWCrossCompile.cmake  Win32Toolchain.cmake  Win64Toolchain.cmake
src/: CMakeLists.txt  dat.db  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  winicon.rc
xlsx/: CMakeLists.txt  xlsxcolor.cpp  xlsxzipreader.cpp
